manifests/hello-world/base-push/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: hello-world-push
    app.kubernetes.io/component: hello-world-push
    app.kubernetes.io/instance: hello-world-push
  name: hello-world-push
spec:
  ports:
  - name: 8080-tcp
    port: 8080
  selector:
    app: hello-world-push
