manifests/hello-world/base-push/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: hello-world-push
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: hello-world-push
    weight: 100
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
